--- a/records/templates/records/form.html
+++ b/records/templates/records/form.html
@@ -3,7 +3,7 @@
 {% block content%}
 <div class="container mt-5">
     <h2 class="text-center"> Financial Indicators Form</h2>
-    <form action="">
+    <!--<form action="">-->
       <div class="form-group mt-3 text-center">
         <label for="type">Select institution type</label>
       </div>
@@ -29,144 +29,173 @@
             </div>
         </div>
         <div id="comparison-form" hidden="">
-          <div class="form-row">
+            <form method="POST" action="{% url 'comparison-form' %}">
+              {% csrf_token %}
+              <table>{{ comparison_form }}</table>
+              <button type="submit">Submit</button>
+            </form>
+          <!--<div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) z działalności operacyjnej</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Przychody netto ze sprzedaży i zrównane z nimi</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zmiana stanu produktów</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Koszt wytworzenia świadczeń na potrzeby własne</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Pozostałe przychody operacyjne</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) brutto</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Przychody finansowes</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) netto</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Aktywa razem</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Kapitał (fundusz) własny</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
-          </div>
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          </div> -->
         </div>
 
 
         <div id="calculation-form" hidden="">
-          <div class="form-row">
+          <form method="POST" action="{% url 'calculation-form' %}">
+            {% csrf_token %}
+            <table>{{ calculation_form }}</table>
+            <button type="submit">Submit</button>
+        </form>
+          
+          <!--<div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) z działalności operacyjnej</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Przychody netto ze sprzedaży i zrównane z nimi</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
 
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Pozostałe przychody operacyjne</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) brutto</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Przychody finansowes</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) netto</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Aktywa razem</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="form-row">
             <label class="col-lg-6" for="exampleFormControlInput1">Kapitał (fundusz) własny</label>
-            <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
-          </div>
+            <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          </div> -->
         </div>
 
       <div id="bank-form" hidden="">
-        <div class="form-row">
+        <form method="POST" action="{% url 'bank-form' %}">
+          {% csrf_token %}
+          <table>{{ bank_form }}</table>
+          <button type="submit">Submit</button>
+       <!--<div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Wynik z tytułu odsetek</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Średnia wartość aktywów oprocentowanych w roku obrotowym</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Koszty działania</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Przychody</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) netto</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Aktywa razem</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Kapitał (fundusz) własny</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
-        </div>
+          <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+        </div> -->
+        </form>
       </div>
 
       <div id="zaklad-form" hidden="">
-        <div class="form-row">
+        <form method="POST">
+          {% csrf_token %}
+          <table>{{ zaklad_form }}</table>
+        <!--<div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Wynik techniczny</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-wynik-techniczy" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Składki</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-skladki" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Zysk (strata) netto</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-zysk" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Składki przypisane brutto</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-skladki-brutto" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Aktywa razem</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-aktywa-razem" placeholder="">
         </div>
         <div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Kapitał (fundusz) własny</label>
-          <input type="number" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
+          <input type="text" class="col-lg-6 form-control" id="zaklad-kapital" placeholder="">
         </div>
+        <div class="mt-4 form-group text-center">
+          <input id="zaklad-calculation" class="btn btn-primary" value="Results">
+        </div>
+        <div id="zaklad-result" hidden="">
+          <p id="rentownosc-techniczna"></p>
+          <p id="rentownosc-sprzedazy"></p>
+          <p id="rentownosc-aktywow"></p>
+          <p id="rentownosc-kapitalu"></p>
+        </div> -->
+        <button type="submit">Submit</button>
+      </form>
       </div>
-      <!--<button type="submit" class="btn btn-default">Submit</button> -->
-    </form>
+    <!--</form> -->
     <script src="{% static 'records/app.js'%}"></script>
   </div>
 {% endblock content%}
