--- a/records/templates/records/form.html
+++ b/records/templates/records/form.html
@@ -1,5 +1,6 @@
 {% extends 'records/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content%}
 <div class="container mt-5">
     <h2 class="text-center"> Financial Indicators Form</h2>
@@ -122,8 +123,11 @@
       <div id="bank-form" hidden="">
         <form method="POST" action="{% url 'bank-form' %}">
           {% csrf_token %}
-          <table>{{ bank_form }}</table>
-          <button type="submit">Submit</button>
+          <p class="text-muted small text-center">Wartosci nie moga byc mniejsze od zera</p>
+          {% crispy bank_form %}
+        </form>
+      </div>
+          
        <!--<div class="form-row">
           <label class="col-lg-6" for="exampleFormControlInput1">Wynik z tytułu odsetek</label>
           <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
@@ -152,8 +156,7 @@
           <label class="col-lg-6" for="exampleFormControlInput1">Kapitał (fundusz) własny</label>
           <input type="text" class="col-lg-6 form-control" id="exampleFormControlInput1" placeholder="">
         </div> -->
-        </form>
-      </div>
+
 
       <div id="zaklad-form" hidden="">
         <form method="POST">
