--- a/records/templates/records/comparison-form.html
+++ b/records/templates/records/comparison-form.html
@@ -1,7 +1,16 @@
 {% extends 'records/base.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
 {% block content%}
 <div class="container">
+    <h4 class="text-center mt-5 mb-5">Formularz Inna Instutucja / Wariant Porownawczy</h4>
+    {% if form.errors %}
+    <form method="POST" action="{% url 'comparison-form' %}">
+        {% csrf_token %}
+        <p class="text-muted small text-center">Wartosci nie moga byc mniejsze od zera</p>
+        {% crispy form %}
+    </form>
+    {% else %}
     <div>
         <h2>Dane wysciowe</h2>
         <p>Zysk (strata) z działalności operacyjnej: {{zysk_strata_z_dzialalnosci_operacyjnej}}</p>
@@ -22,5 +31,6 @@
         <p>Rentownosc aktywow: {{rentownosc_aktywow}} %</p>
         <p>Rentownosc kapitalu wlasnego: {{rentownosc_kapitalu_wlasnego}} %</p>
     </div>
+    {% endif %}
 </div>
 {% endblock%}
